# py_roscpp_init

./: CMakeLists.txt  README.md  package.xml  setup.py
include/: roscpp_init.h
src/: roscpp_init.cpp
src/cython/: CMakeLists.txt  roscpp_init.pyx
