<?xml version="1.0"?>
<package format="2">
  <name>py_roscpp</name>
  <version>0.0.0</version>
  <description>A remote hardware interface package package, tested for controlling simulators up to 3 kHz</description>
  <maintainer email="alireSa.r@gmail.com">Alireza Ranjbar</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <depend>gazebo_ros_control</depend>
  <depend>roscpp</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
